# X-kom

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
api/: xkom_client.py  xkom_response.py
constants/: constant.py  constant.yaml
models/: producer.py
