[tool.poetry]
name = "x-kom"
version = "0.2.0"
description = "Get detailed information about item in internet-shop www.x-kom.pl"
authors = ["Aliaksandr Samsonik"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pyyaml = "^6.0.1"
pylint = "^3.2.6"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
bandit = "^1.7.9"
docformatter = "^1.7.5"
pre-commit = "^3.7.1"
faker = "^26.0.0"
yamllint = "^1.35.1"
